# second-brain

./: .gitignore
apps/brain-core/: README.md  pyproject.toml
apps/brain-core/brain_core/: __main__.py  agent.py  capture.py  dashboard.py  db.py  gcal.py  gtasks.py  inbox.py  jobs.py  main.py  metrics.py  thesis.py  tick.py  voice.py  watcher.py  whoop.py
apps/brain-core/brain_core/migrations/: 0002_run_queue.sql
apps/brain-core/brain_core/reconciler/: __init__.py  conflicts.py  merge.py  three_way.py  types.py
apps/brain-core/brain_core/sandbox/: __init__.py  container.py  exec.py  lifecycle.py  types.py  worktree.py
apps/brain-core/brain_core/scheduler/: __init__.py  admission.py  dispatch.py  queue.py  run_one.py  runner.py  submit.py  types.py
apps/brain-core/tests/: conftest.py
apps/brain-core/tests/integration/: conftest.py  test_end_to_end_run.py
apps/brain-core/tests/integration/fake_brain_worker/: Dockerfile  fake-claude.sh
apps/brain-core/tests/unit/: test_migrations.py  test_reconciler_merge.py  test_sandbox_container_args.py  test_sandbox_exec.py  test_sandbox_worktree.py  test_scheduler_admission.py  test_scheduler_dispatch.py  test_scheduler_queue.py  test_scheduler_submit.py
apps/brain-web/: .env.production  package-lock.json  package.json
bench/: README.md  run.py
bench/loadgen/: generator.py  profiles.py
bench/report/: render.py  template.md.j2
bench/reports/: 2026-04-13-baseline.md
docs/architecture/: README.md  modules.md
docs/design/: brain-v1.md
infra/docker/: Dockerfile.runner  compose.yml  entrypoint.sh
infra/ec2/: bootstrap-day2.md  bootstrap.md  (+3 more)
(+71 files in other folders)
