[project]
name = "brain-core"
version = "0.1.0"
description = "FastAPI orchestrator for the second-brain ambient agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "watchdog>=5.0",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_core"]
